[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-account-manager"
version = "0.2.0"
description = "Account switcher for Claude Code — switch logins and see each account's live usage from a terminal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "antipaster" }]
keywords = ["claude", "claude-code", "cli", "tui", "textual", "account-switcher"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/antipaster/claude-account-manager"
Repository = "https://github.com/antipaster/claude-account-manager"

[project.scripts]
cam = "cam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cam = ["styles.tcss"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
